In with the new TDSM Rebind

--- a/.gitignore
+++ b/.gitignore
@@ -2,21 +2,31 @@
 *.csproj.user
 *.pidb
 *.userprefs
-/Terraria_Server/bin
-/Terraria_Server/obj
-/Utility/bin
-/Utility/obj
-/Regions/obj
-/Regions/bin
-/TDSMPlugin/obj
-/TDSMPlugin/bin
-/TDSMPermissions/TDSMPermissions/bin
-/TDSMPermissions/TDSMPermissions/obj
-/Languages/bin
-/Languages/obj
+/Retired/Terraria_Server/bin
+/Retired/Terraria_Server/obj
+/Retired/Utility/bin
+/Retired/Utility/obj
+/Retired/Regions/obj
+/Retired/Regions/bin
+/Retired/TDSMPlugin/obj
+/Retired/TDSMPlugin/bin
+/Retired/TDSMPermissions/TDSMPermissions/bin
+/Retired/TDSMPermissions/TDSMPermissions/obj
+/Retired/Languages/bin
+/Retired/Languages/obj
 /Restrict/bin
 /Restrict/obj
-/TDSMPlugin/TDSMPlugin/bin
-/TDSMPlugin/TDSMPlugin/obj
-/TDSM_PermissionsX/bin
-/TDSM_PermissionsX/obj
+/Retired/TDSMPlugin/TDSMPlugin/bin
+/Retired/TDSMPlugin/TDSMPlugin/obj
+/Retired/TDSM_PermissionsX/bin
+/Retired/TDSM_PermissionsX/obj
+
+/Binaries/*.zip
+/tdsm-api/bin
+/tdsm-api/obj
+/tdsm-core/bin
+/tdsm-core/obj
+/tdsm-patcher/bin
+/tdsm-patcher/obj
+/tdsm-utility/bin
+/tdsm-utility/obj
