--- a/tdsm-core/tdsm-core.csproj
+++ b/tdsm-core/tdsm-core.csproj
@@ -52,7 +52,7 @@
     <Reference Include="Mono.Cecil">
       <HintPath>..\Binaries\Mono.Cecil.dll</HintPath>
     </Reference>
-    <Reference Include="tdsm.exe">
+    <Reference Include="tdsm">
       <HintPath>..\tdsm-patcher\bin\x86\Debug\tdsm.exe</HintPath>
     </Reference>
   </ItemGroup>
