Removed API from patcher completely
Things should actually reside in the API - but we'll see.

--- a/tdsm-api/tdsm-api.csproj
+++ b/tdsm-api/tdsm-api.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Command\DefaultCommands.cs" />
     <Compile Include="Command\ISender.cs" />
     <Compile Include="Command\Sender.cs" />
+    <Compile Include="DomainEntry.cs" />
     <Compile Include="Globals.cs" />
     <Compile Include="Misc\Affix.cs" />
     <Compile Include="Misc\DataRegister.cs" />
