Begin a webserver, and added ArraySort for LUA

--- a/tdsm-api/tdsm-api.csproj
+++ b/tdsm-api/tdsm-api.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Misc\Affix.cs" />
     <Compile Include="Misc\DataRegister.cs" />
     <Compile Include="Misc\Platform.cs" />
+    <Compile Include="Misc\PropertiesFile.cs" />
     <Compile Include="Permissions\PermissionsManager.cs" />
     <Compile Include="Permissions\XmlSupplier.cs" />
     <Compile Include="Plugin\HookAttribute.cs" />
