ID lookup added to the API

--- a/tdsm-api/tdsm-api.csproj
+++ b/tdsm-api/tdsm-api.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Command\Sender.cs" />
     <Compile Include="DomainEntry.cs" />
     <Compile Include="Globals.cs" />
+    <Compile Include="ID\Lookup.cs" />
     <Compile Include="Misc\Affix.cs" />
     <Compile Include="Misc\DataRegister.cs" />
     <Compile Include="Misc\Platform.cs" />
