--- a/tdsm-api/tdsm-api.csproj
+++ b/tdsm-api/tdsm-api.csproj
@@ -66,9 +66,9 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="tdsm, Version=1.2.4.1, Culture=neutral, processorArchitecture=x86">
+    <Reference Include="tdsm.microsoft, Version=0.0.1.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\tdsm-patcher\bin\x86\Debug\tdsm.exe</HintPath>
+      <HintPath>..\tdsm-patcher\bin\x86\Debug\tdsm.microsoft.exe</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -99,10 +99,53 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Terraria\Tile.cs" />
     <Compile Include="Callbacks\UserInput.cs" />
+    <Compile Include="Xna\Audio\AudioStopOptions.cs" />
+    <Compile Include="Xna\Audio\SoundState.cs" />
+    <Compile Include="Xna\Audio\SoundEffectInstance.cs" />
+    <Compile Include="Xna\Audio\SoundEffect.cs" />
+    <Compile Include="Xna\Audio\WaveBank.cs" />
+    <Compile Include="Xna\Audio\Cue.cs" />
+    <Compile Include="Xna\Audio\SoundBank.cs" />
+    <Compile Include="Xna\Audio\AudioEngine.cs" />
     <Compile Include="Xna\Color.cs" />
     <Compile Include="Xna\ContentManager.cs" />
     <Compile Include="Xna\Game.cs" />
-    <Compile Include="Xna\Texture2D.cs" />
+    <Compile Include="Xna\Graphics\RenderTargetUsage.cs" />
+    <Compile Include="Xna\Graphics\RenderTarget2D.cs" />
+    <Compile Include="Xna\Graphics\GraphicsAdapter.cs" />
+    <Compile Include="Xna\Graphics\DisplayMode.cs" />
+    <Compile Include="Xna\Graphics\DisplayModeCollection.cs" />
+    <Compile Include="Xna\Graphics\Effect.cs" />
+    <Compile Include="Xna\Graphics\EffectTechnique.cs" />
+    <Compile Include="Xna\Graphics\EffectPass.cs" />
+    <Compile Include="Xna\Graphics\EffectPassCollection.cs" />
+    <Compile Include="Xna\Graphics\BlendState.cs" />
+    <Compile Include="Xna\Graphics\SamplerState.cs" />
+    <Compile Include="Xna\Graphics\GraphicsDevice.cs" />
+    <Compile Include="Xna\Graphics\DepthStencilState.cs" />
+    <Compile Include="Xna\Graphics\GraphicsResource.cs" />
+    <Compile Include="Xna\Graphics\PresentationParameters.cs" />
+    <Compile Include="Xna\Graphics\SpriteSortMode.cs" />
+    <Compile Include="Xna\Graphics\SpriteEffects.cs" />
+    <Compile Include="Xna\Graphics\SpriteBatch.cs" />
+    <Compile Include="Xna\Graphics\SurfaceFormat.cs" />
+    <Compile Include="Xna\Input\Keys.cs" />
+    <Compile Include="Xna\Input\GamePadTriggers.cs" />
+    <Compile Include="Xna\Input\GamePadThumbSticks.cs" />
+    <Compile Include="Xna\Input\GamePadDPad.cs" />
+    <Compile Include="Xna\Input\GamePadState.cs" />
+    <Compile Include="Xna\Input\GamePad.cs" />
+    <Compile Include="Xna\Input\MouseState.cs" />
+    <Compile Include="Xna\Input\Mouse.cs" />
+    <Compile Include="Xna\Input\KeyboardState.cs" />
+    <Compile Include="Xna\Input\Keyboard.cs" />
+    <Compile Include="Xna\Input\ButtonState.cs" />
+    <Compile Include="Xna\PlayerIndex.cs" />
+    <Compile Include="Xna\Graphics\Viewport.cs" />
+    <Compile Include="Xna\Graphics\DepthFormat.cs" />
+    <Compile Include="Xna\Graphics\RasterizerState.cs" />
+    <Compile Include="Xna\Graphics\SpriteFont.cs" />
+    <Compile Include="Xna\Graphics\Texture2D.cs" />
     <Compile Include="Plugin\BasePlugin.cs" />
     <Compile Include="Command\ConsoleSender.cs" />
     <Compile Include="Misc\ExitException.cs" />
