--- a/tdsm-core/tdsm-core.csproj
+++ b/tdsm-core/tdsm-core.csproj
@@ -52,9 +52,8 @@
     <Reference Include="Mono.Cecil">
       <HintPath>..\Binaries\Mono.Cecil.dll</HintPath>
     </Reference>
-    <Reference Include="tdsm, Version=1.2.4.1, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\tdsm-patcher\bin\x86\Debug\tdsm.exe</HintPath>
+    <Reference Include="tdsm.microsoft">
+      <HintPath>..\tdsm-patcher\bin\x86\Debug\tdsm.microsoft.exe</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
