Repo template, Server key for heartbeat

--- a/tdsm-core/tdsm-core.csproj
+++ b/tdsm-core/tdsm-core.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="BasePlayer.cs" />
     <Compile Include="Callbacks\Net.cs" />
+    <Compile Include="Command\PluginRepo.cs" />
     <Compile Include="Command\Invasion.cs" />
     <Compile Include="Command\Commands.cs" />
     <Compile Include="Definitions\DefinitionManager.cs" />
